// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders with data 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <LocationDropdown
    LocationDropdownIsOpen={false}
    alertIsActive={false}
    closeLocationDropdown={[Function]}
    locationDropdownImage="foo"
    locationSortedByGroup={
        Object {
            "brooklyn": Object {
              "Brooklyn": Array [
                Object {
                  "fields": Object {
                    "address1": "foo",
                    "availableFlavors": Array [],
                    "city": "foo",
                    "contentBlocks": Array [],
                    "delivery": true,
                    "friday": "foo-foo",
                    "image": Object {
                      "fields": Object {
                        "file": Object {
                          "url": "foo",
                        },
                      },
                      "sys": Object {
                        "id": "foo",
                      },
                    },
                    "location": Object {
                      "lat": 0,
                      "lon": 0,
                    },
                    "monday": "foo-foo",
                    "orderDeliveryLink": "foo",
                    "partyAvailable": true,
                    "partyTypes": Object {},
                    "phone": "123-456-789",
                    "region": "foo",
                    "saturday": "foo-foo",
                    "seasonal": false,
                    "seasonalImage": Object {
                      "fields": Object {
                        "file": Object {
                          "url": "foo",
                        },
                      },
                      "sys": Object {
                        "id": "foo",
                      },
                    },
                    "slug": "foo",
                    "state": "foo",
                    "sunday": "foo-foo",
                    "thursday": "foo-foo",
                    "timeSlots": Object {},
                    "title": "foo",
                    "tuesday": "foo-foo",
                    "wednesday": "foo-foo",
                    "zip": "foo",
                  },
                },
              ],
            },
          }
    }
    openLocationDropdown={[Function]}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <div
        className="absolute z-nav"
>
        <div
                className="w100 pt3 px4 bg-peach fixed drip"
        >
                <div
                        className="flex flex-row items-center justify-between"
                >
                        <div
                                className="col-3"
                        >
                                <Image
                                        alt=""
                                        bg={false}
                                        className="w100"
                                        onImgLoad={[Function]}
                                        src="foo"
                                        style={Object {}}
                                />
                        </div>
                        <div
                                className="col-8 flex flex-row items-start justify-between"
                        >
                                <div
                                        className="col-4 mr2"
                                >
                                        <p
                                                className="carter text-white mb3 white-space-normal"
                                        >
                                                Brooklyn
                                        </p>
                                        <div
                                                className="flex flex-column items-start mb2"
                                        >
                                                <p
                                                        className="bold text-white mb1 white-space-normal"
                                                >
                                                        Brooklyn
                                                </p>
                                                <Button
                                                        childrenWrapperClassName=""
                                                        className="text-white light mb1 white-space-normal avenir"
                                                        color="white-denim"
                                                        disabled={false}
                                                        fullWidth={false}
                                                        hover="underline-white"
                                                        label=""
                                                        onClick={[Function]}
                                                        onMouseEnter={[Function]}
                                                        onMouseLeave={[Function]}
                                                        shadow={false}
                                                        to="/location/"
                                                        type="button"
                                                        variant="style-none"
                                                />
                                        </div>
                                </div>
                        </div>
                </div>
        </div>
</div>,
      "className": "undefined relative",
      "onMouseEnter": [Function],
      "onMouseLeave": [Function],
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <div
          className="w100 pt3 px4 bg-peach fixed drip"
>
          <div
                    className="flex flex-row items-center justify-between"
          >
                    <div
                              className="col-3"
                    >
                              <Image
                                        alt=""
                                        bg={false}
                                        className="w100"
                                        onImgLoad={[Function]}
                                        src="foo"
                                        style={Object {}}
                              />
                    </div>
                    <div
                              className="col-8 flex flex-row items-start justify-between"
                    >
                              <div
                                        className="col-4 mr2"
                              >
                                        <p
                                                  className="carter text-white mb3 white-space-normal"
                                        >
                                                  Brooklyn
                                        </p>
                                        <div
                                                  className="flex flex-column items-start mb2"
                                        >
                                                  <p
                                                            className="bold text-white mb1 white-space-normal"
                                                  >
                                                            Brooklyn
                                                  </p>
                                                  <Button
                                                            childrenWrapperClassName=""
                                                            className="text-white light mb1 white-space-normal avenir"
                                                            color="white-denim"
                                                            disabled={false}
                                                            fullWidth={false}
                                                            hover="underline-white"
                                                            label=""
                                                            onClick={[Function]}
                                                            onMouseEnter={[Function]}
                                                            onMouseLeave={[Function]}
                                                            shadow={false}
                                                            to="/location/"
                                                            type="button"
                                                            variant="style-none"
                                                  />
                                        </div>
                              </div>
                    </div>
          </div>
</div>,
        "className": "absolute z-nav",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <div
            className="flex flex-row items-center justify-between"
>
            <div
                        className="col-3"
            >
                        <Image
                                    alt=""
                                    bg={false}
                                    className="w100"
                                    onImgLoad={[Function]}
                                    src="foo"
                                    style={Object {}}
                        />
            </div>
            <div
                        className="col-8 flex flex-row items-start justify-between"
            >
                        <div
                                    className="col-4 mr2"
                        >
                                    <p
                                                className="carter text-white mb3 white-space-normal"
                                    >
                                                Brooklyn
                                    </p>
                                    <div
                                                className="flex flex-column items-start mb2"
                                    >
                                                <p
                                                            className="bold text-white mb1 white-space-normal"
                                                >
                                                            Brooklyn
                                                </p>
                                                <Button
                                                            childrenWrapperClassName=""
                                                            className="text-white light mb1 white-space-normal avenir"
                                                            color="white-denim"
                                                            disabled={false}
                                                            fullWidth={false}
                                                            hover="underline-white"
                                                            label=""
                                                            onClick={[Function]}
                                                            onMouseEnter={[Function]}
                                                            onMouseLeave={[Function]}
                                                            shadow={false}
                                                            to="/location/"
                                                            type="button"
                                                            variant="style-none"
                                                />
                                    </div>
                        </div>
            </div>
</div>,
          "className": "w100 pt3 px4 bg-peach fixed drip",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div
                className="col-3"
>
                <Image
                                alt=""
                                bg={false}
                                className="w100"
                                onImgLoad={[Function]}
                                src="foo"
                                style={Object {}}
                />
</div>,
              <div
                className="col-8 flex flex-row items-start justify-between"
>
                <div
                                className="col-4 mr2"
                >
                                <p
                                                className="carter text-white mb3 white-space-normal"
                                >
                                                Brooklyn
                                </p>
                                <div
                                                className="flex flex-column items-start mb2"
                                >
                                                <p
                                                                className="bold text-white mb1 white-space-normal"
                                                >
                                                                Brooklyn
                                                </p>
                                                <Button
                                                                childrenWrapperClassName=""
                                                                className="text-white light mb1 white-space-normal avenir"
                                                                color="white-denim"
                                                                disabled={false}
                                                                fullWidth={false}
                                                                hover="underline-white"
                                                                label=""
                                                                onClick={[Function]}
                                                                onMouseEnter={[Function]}
                                                                onMouseLeave={[Function]}
                                                                shadow={false}
                                                                to="/location/"
                                                                type="button"
                                                                variant="style-none"
                                                />
                                </div>
                </div>
</div>,
            ],
            "className": "flex flex-row items-center justify-between",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <Image
                  alt=""
                  bg={false}
                  className="w100"
                  onImgLoad={[Function]}
                  src="foo"
                  style={Object {}}
/>,
                "className": "col-3",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "alt": "",
                  "bg": false,
                  "children": null,
                  "className": "w100",
                  "onImgLoad": [Function],
                  "src": "foo",
                  "style": Object {},
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <div
                    className="col-4 mr2"
>
                    <p
                                        className="carter text-white mb3 white-space-normal"
                    >
                                        Brooklyn
                    </p>
                    <div
                                        className="flex flex-column items-start mb2"
                    >
                                        <p
                                                            className="bold text-white mb1 white-space-normal"
                                        >
                                                            Brooklyn
                                        </p>
                                        <Button
                                                            childrenWrapperClassName=""
                                                            className="text-white light mb1 white-space-normal avenir"
                                                            color="white-denim"
                                                            disabled={false}
                                                            fullWidth={false}
                                                            hover="underline-white"
                                                            label=""
                                                            onClick={[Function]}
                                                            onMouseEnter={[Function]}
                                                            onMouseLeave={[Function]}
                                                            shadow={false}
                                                            to="/location/"
                                                            type="button"
                                                            variant="style-none"
                                        />
                    </div>
</div>,
                ],
                "className": "col-8 flex flex-row items-start justify-between",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": "brooklyn",
                  "nodeType": "host",
                  "props": Object {
                    "children": Array [
                      <p
                        className="carter text-white mb3 white-space-normal"
>
                        Brooklyn
</p>,
                      Array [
                        <div
                          className="flex flex-column items-start mb2"
>
                          <p
                                                    className="bold text-white mb1 white-space-normal"
                          >
                                                    Brooklyn
                          </p>
                          <Button
                                                    childrenWrapperClassName=""
                                                    className="text-white light mb1 white-space-normal avenir"
                                                    color="white-denim"
                                                    disabled={false}
                                                    fullWidth={false}
                                                    hover="underline-white"
                                                    label=""
                                                    onClick={[Function]}
                                                    onMouseEnter={[Function]}
                                                    onMouseLeave={[Function]}
                                                    shadow={false}
                                                    to="/location/"
                                                    type="button"
                                                    variant="style-none"
                          />
</div>,
                      ],
                    ],
                    "className": "col-4 mr2",
                  },
                  "ref": null,
                  "rendered": Array [
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "children": "Brooklyn",
                        "className": "carter text-white mb3 white-space-normal",
                      },
                      "ref": null,
                      "rendered": "Brooklyn",
                      "type": "p",
                    },
                    Object {
                      "instance": null,
                      "key": "Brooklyn",
                      "nodeType": "host",
                      "props": Object {
                        "children": Array [
                          <p
                            className="bold text-white mb1 white-space-normal"
>
                            Brooklyn
</p>,
                          Array [
                            <Button
                              childrenWrapperClassName=""
                              className="text-white light mb1 white-space-normal avenir"
                              color="white-denim"
                              disabled={false}
                              fullWidth={false}
                              hover="underline-white"
                              label=""
                              onClick={[Function]}
                              onMouseEnter={[Function]}
                              onMouseLeave={[Function]}
                              shadow={false}
                              to="/location/"
                              type="button"
                              variant="style-none"
/>,
                          ],
                        ],
                        "className": "flex flex-column items-start mb2",
                      },
                      "ref": null,
                      "rendered": Array [
                        Object {
                          "instance": null,
                          "key": undefined,
                          "nodeType": "host",
                          "props": Object {
                            "children": "Brooklyn",
                            "className": "bold text-white mb1 white-space-normal",
                          },
                          "ref": null,
                          "rendered": "Brooklyn",
                          "type": "p",
                        },
                        Object {
                          "instance": null,
                          "key": undefined,
                          "nodeType": "function",
                          "props": Object {
                            "children": null,
                            "childrenWrapperClassName": "",
                            "className": "text-white light mb1 white-space-normal avenir",
                            "color": "white-denim",
                            "disabled": false,
                            "fullWidth": false,
                            "hover": "underline-white",
                            "label": "",
                            "onClick": [Function],
                            "onMouseEnter": [Function],
                            "onMouseLeave": [Function],
                            "shadow": false,
                            "to": "/location/",
                            "type": "button",
                            "variant": "style-none",
                          },
                          "ref": null,
                          "rendered": null,
                          "type": [Function],
                        },
                      ],
                      "type": "div",
                    },
                  ],
                  "type": "div",
                },
              ],
              "type": "div",
            },
          ],
          "type": "div",
        },
        "type": "div",
      },
      "type": "div",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <div
          className="absolute z-nav"
>
          <div
                    className="w100 pt3 px4 bg-peach fixed drip"
          >
                    <div
                              className="flex flex-row items-center justify-between"
                    >
                              <div
                                        className="col-3"
                              >
                                        <Image
                                                  alt=""
                                                  bg={false}
                                                  className="w100"
                                                  onImgLoad={[Function]}
                                                  src="foo"
                                                  style={Object {}}
                                        />
                              </div>
                              <div
                                        className="col-8 flex flex-row items-start justify-between"
                              >
                                        <div
                                                  className="col-4 mr2"
                                        >
                                                  <p
                                                            className="carter text-white mb3 white-space-normal"
                                                  >
                                                            Brooklyn
                                                  </p>
                                                  <div
                                                            className="flex flex-column items-start mb2"
                                                  >
                                                            <p
                                                                      className="bold text-white mb1 white-space-normal"
                                                            >
                                                                      Brooklyn
                                                            </p>
                                                            <Button
                                                                      childrenWrapperClassName=""
                                                                      className="text-white light mb1 white-space-normal avenir"
                                                                      color="white-denim"
                                                                      disabled={false}
                                                                      fullWidth={false}
                                                                      hover="underline-white"
                                                                      label=""
                                                                      onClick={[Function]}
                                                                      onMouseEnter={[Function]}
                                                                      onMouseLeave={[Function]}
                                                                      shadow={false}
                                                                      to="/location/"
                                                                      type="button"
                                                                      variant="style-none"
                                                            />
                                                  </div>
                                        </div>
                              </div>
                    </div>
          </div>
</div>,
        "className": "undefined relative",
        "onMouseEnter": [Function],
        "onMouseLeave": [Function],
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <div
            className="w100 pt3 px4 bg-peach fixed drip"
>
            <div
                        className="flex flex-row items-center justify-between"
            >
                        <div
                                    className="col-3"
                        >
                                    <Image
                                                alt=""
                                                bg={false}
                                                className="w100"
                                                onImgLoad={[Function]}
                                                src="foo"
                                                style={Object {}}
                                    />
                        </div>
                        <div
                                    className="col-8 flex flex-row items-start justify-between"
                        >
                                    <div
                                                className="col-4 mr2"
                                    >
                                                <p
                                                            className="carter text-white mb3 white-space-normal"
                                                >
                                                            Brooklyn
                                                </p>
                                                <div
                                                            className="flex flex-column items-start mb2"
                                                >
                                                            <p
                                                                        className="bold text-white mb1 white-space-normal"
                                                            >
                                                                        Brooklyn
                                                            </p>
                                                            <Button
                                                                        childrenWrapperClassName=""
                                                                        className="text-white light mb1 white-space-normal avenir"
                                                                        color="white-denim"
                                                                        disabled={false}
                                                                        fullWidth={false}
                                                                        hover="underline-white"
                                                                        label=""
                                                                        onClick={[Function]}
                                                                        onMouseEnter={[Function]}
                                                                        onMouseLeave={[Function]}
                                                                        shadow={false}
                                                                        to="/location/"
                                                                        type="button"
                                                                        variant="style-none"
                                                            />
                                                </div>
                                    </div>
                        </div>
            </div>
</div>,
          "className": "absolute z-nav",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <div
              className="flex flex-row items-center justify-between"
>
              <div
                            className="col-3"
              >
                            <Image
                                          alt=""
                                          bg={false}
                                          className="w100"
                                          onImgLoad={[Function]}
                                          src="foo"
                                          style={Object {}}
                            />
              </div>
              <div
                            className="col-8 flex flex-row items-start justify-between"
              >
                            <div
                                          className="col-4 mr2"
                            >
                                          <p
                                                        className="carter text-white mb3 white-space-normal"
                                          >
                                                        Brooklyn
                                          </p>
                                          <div
                                                        className="flex flex-column items-start mb2"
                                          >
                                                        <p
                                                                      className="bold text-white mb1 white-space-normal"
                                                        >
                                                                      Brooklyn
                                                        </p>
                                                        <Button
                                                                      childrenWrapperClassName=""
                                                                      className="text-white light mb1 white-space-normal avenir"
                                                                      color="white-denim"
                                                                      disabled={false}
                                                                      fullWidth={false}
                                                                      hover="underline-white"
                                                                      label=""
                                                                      onClick={[Function]}
                                                                      onMouseEnter={[Function]}
                                                                      onMouseLeave={[Function]}
                                                                      shadow={false}
                                                                      to="/location/"
                                                                      type="button"
                                                                      variant="style-none"
                                                        />
                                          </div>
                            </div>
              </div>
</div>,
            "className": "w100 pt3 px4 bg-peach fixed drip",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <div
                  className="col-3"
>
                  <Image
                                    alt=""
                                    bg={false}
                                    className="w100"
                                    onImgLoad={[Function]}
                                    src="foo"
                                    style={Object {}}
                  />
</div>,
                <div
                  className="col-8 flex flex-row items-start justify-between"
>
                  <div
                                    className="col-4 mr2"
                  >
                                    <p
                                                      className="carter text-white mb3 white-space-normal"
                                    >
                                                      Brooklyn
                                    </p>
                                    <div
                                                      className="flex flex-column items-start mb2"
                                    >
                                                      <p
                                                                        className="bold text-white mb1 white-space-normal"
                                                      >
                                                                        Brooklyn
                                                      </p>
                                                      <Button
                                                                        childrenWrapperClassName=""
                                                                        className="text-white light mb1 white-space-normal avenir"
                                                                        color="white-denim"
                                                                        disabled={false}
                                                                        fullWidth={false}
                                                                        hover="underline-white"
                                                                        label=""
                                                                        onClick={[Function]}
                                                                        onMouseEnter={[Function]}
                                                                        onMouseLeave={[Function]}
                                                                        shadow={false}
                                                                        to="/location/"
                                                                        type="button"
                                                                        variant="style-none"
                                                      />
                                    </div>
                  </div>
</div>,
              ],
              "className": "flex flex-row items-center justify-between",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": <Image
                    alt=""
                    bg={false}
                    className="w100"
                    onImgLoad={[Function]}
                    src="foo"
                    style={Object {}}
/>,
                  "className": "col-3",
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "alt": "",
                    "bg": false,
                    "children": null,
                    "className": "w100",
                    "onImgLoad": [Function],
                    "src": "foo",
                    "style": Object {},
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                "type": "div",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    <div
                      className="col-4 mr2"
>
                      <p
                                            className="carter text-white mb3 white-space-normal"
                      >
                                            Brooklyn
                      </p>
                      <div
                                            className="flex flex-column items-start mb2"
                      >
                                            <p
                                                                  className="bold text-white mb1 white-space-normal"
                                            >
                                                                  Brooklyn
                                            </p>
                                            <Button
                                                                  childrenWrapperClassName=""
                                                                  className="text-white light mb1 white-space-normal avenir"
                                                                  color="white-denim"
                                                                  disabled={false}
                                                                  fullWidth={false}
                                                                  hover="underline-white"
                                                                  label=""
                                                                  onClick={[Function]}
                                                                  onMouseEnter={[Function]}
                                                                  onMouseLeave={[Function]}
                                                                  shadow={false}
                                                                  to="/location/"
                                                                  type="button"
                                                                  variant="style-none"
                                            />
                      </div>
</div>,
                  ],
                  "className": "col-8 flex flex-row items-start justify-between",
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": "brooklyn",
                    "nodeType": "host",
                    "props": Object {
                      "children": Array [
                        <p
                          className="carter text-white mb3 white-space-normal"
>
                          Brooklyn
</p>,
                        Array [
                          <div
                            className="flex flex-column items-start mb2"
>
                            <p
                                                        className="bold text-white mb1 white-space-normal"
                            >
                                                        Brooklyn
                            </p>
                            <Button
                                                        childrenWrapperClassName=""
                                                        className="text-white light mb1 white-space-normal avenir"
                                                        color="white-denim"
                                                        disabled={false}
                                                        fullWidth={false}
                                                        hover="underline-white"
                                                        label=""
                                                        onClick={[Function]}
                                                        onMouseEnter={[Function]}
                                                        onMouseLeave={[Function]}
                                                        shadow={false}
                                                        to="/location/"
                                                        type="button"
                                                        variant="style-none"
                            />
</div>,
                        ],
                      ],
                      "className": "col-4 mr2",
                    },
                    "ref": null,
                    "rendered": Array [
                      Object {
                        "instance": null,
                        "key": undefined,
                        "nodeType": "host",
                        "props": Object {
                          "children": "Brooklyn",
                          "className": "carter text-white mb3 white-space-normal",
                        },
                        "ref": null,
                        "rendered": "Brooklyn",
                        "type": "p",
                      },
                      Object {
                        "instance": null,
                        "key": "Brooklyn",
                        "nodeType": "host",
                        "props": Object {
                          "children": Array [
                            <p
                              className="bold text-white mb1 white-space-normal"
>
                              Brooklyn
</p>,
                            Array [
                              <Button
                                childrenWrapperClassName=""
                                className="text-white light mb1 white-space-normal avenir"
                                color="white-denim"
                                disabled={false}
                                fullWidth={false}
                                hover="underline-white"
                                label=""
                                onClick={[Function]}
                                onMouseEnter={[Function]}
                                onMouseLeave={[Function]}
                                shadow={false}
                                to="/location/"
                                type="button"
                                variant="style-none"
/>,
                            ],
                          ],
                          "className": "flex flex-column items-start mb2",
                        },
                        "ref": null,
                        "rendered": Array [
                          Object {
                            "instance": null,
                            "key": undefined,
                            "nodeType": "host",
                            "props": Object {
                              "children": "Brooklyn",
                              "className": "bold text-white mb1 white-space-normal",
                            },
                            "ref": null,
                            "rendered": "Brooklyn",
                            "type": "p",
                          },
                          Object {
                            "instance": null,
                            "key": undefined,
                            "nodeType": "function",
                            "props": Object {
                              "children": null,
                              "childrenWrapperClassName": "",
                              "className": "text-white light mb1 white-space-normal avenir",
                              "color": "white-denim",
                              "disabled": false,
                              "fullWidth": false,
                              "hover": "underline-white",
                              "label": "",
                              "onClick": [Function],
                              "onMouseEnter": [Function],
                              "onMouseLeave": [Function],
                              "shadow": false,
                              "to": "/location/",
                              "type": "button",
                              "variant": "style-none",
                            },
                            "ref": null,
                            "rendered": null,
                            "type": [Function],
                          },
                        ],
                        "type": "div",
                      },
                    ],
                    "type": "div",
                  },
                ],
                "type": "div",
              },
            ],
            "type": "div",
          },
          "type": "div",
        },
        "type": "div",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`renders without data 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <LocationDropdown
    LocationDropdownIsOpen={false}
    alertIsActive={false}
    closeLocationDropdown={[Function]}
    locationDropdownImage=""
    locationSortedByGroup={Object {}}
    openLocationDropdown={[Function]}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <div
        className="absolute z-nav"
>
        <div
                className="w100 pt3 px4 bg-peach fixed drip"
        >
                <div
                        className="flex flex-row items-center justify-between"
                >
                        <div
                                className="col-3"
                        >
                                <Image
                                        alt=""
                                        bg={false}
                                        className="w100"
                                        onImgLoad={[Function]}
                                        src=""
                                        style={Object {}}
                                />
                        </div>
                        <div
                                className="col-8 flex flex-row items-start justify-between"
                        >
                                
                        </div>
                </div>
        </div>
</div>,
      "className": "undefined relative",
      "onMouseEnter": [Function],
      "onMouseLeave": [Function],
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <div
          className="w100 pt3 px4 bg-peach fixed drip"
>
          <div
                    className="flex flex-row items-center justify-between"
          >
                    <div
                              className="col-3"
                    >
                              <Image
                                        alt=""
                                        bg={false}
                                        className="w100"
                                        onImgLoad={[Function]}
                                        src=""
                                        style={Object {}}
                              />
                    </div>
                    <div
                              className="col-8 flex flex-row items-start justify-between"
                    >
                              
                    </div>
          </div>
</div>,
        "className": "absolute z-nav",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <div
            className="flex flex-row items-center justify-between"
>
            <div
                        className="col-3"
            >
                        <Image
                                    alt=""
                                    bg={false}
                                    className="w100"
                                    onImgLoad={[Function]}
                                    src=""
                                    style={Object {}}
                        />
            </div>
            <div
                        className="col-8 flex flex-row items-start justify-between"
            >
                        
            </div>
</div>,
          "className": "w100 pt3 px4 bg-peach fixed drip",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div
                className="col-3"
>
                <Image
                                alt=""
                                bg={false}
                                className="w100"
                                onImgLoad={[Function]}
                                src=""
                                style={Object {}}
                />
</div>,
              <div
                className="col-8 flex flex-row items-start justify-between"
>
                
</div>,
            ],
            "className": "flex flex-row items-center justify-between",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <Image
                  alt=""
                  bg={false}
                  className="w100"
                  onImgLoad={[Function]}
                  src=""
                  style={Object {}}
/>,
                "className": "col-3",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "alt": "",
                  "bg": false,
                  "children": null,
                  "className": "w100",
                  "onImgLoad": [Function],
                  "src": "",
                  "style": Object {},
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [],
                "className": "col-8 flex flex-row items-start justify-between",
              },
              "ref": null,
              "rendered": Array [],
              "type": "div",
            },
          ],
          "type": "div",
        },
        "type": "div",
      },
      "type": "div",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <div
          className="absolute z-nav"
>
          <div
                    className="w100 pt3 px4 bg-peach fixed drip"
          >
                    <div
                              className="flex flex-row items-center justify-between"
                    >
                              <div
                                        className="col-3"
                              >
                                        <Image
                                                  alt=""
                                                  bg={false}
                                                  className="w100"
                                                  onImgLoad={[Function]}
                                                  src=""
                                                  style={Object {}}
                                        />
                              </div>
                              <div
                                        className="col-8 flex flex-row items-start justify-between"
                              >
                                        
                              </div>
                    </div>
          </div>
</div>,
        "className": "undefined relative",
        "onMouseEnter": [Function],
        "onMouseLeave": [Function],
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <div
            className="w100 pt3 px4 bg-peach fixed drip"
>
            <div
                        className="flex flex-row items-center justify-between"
            >
                        <div
                                    className="col-3"
                        >
                                    <Image
                                                alt=""
                                                bg={false}
                                                className="w100"
                                                onImgLoad={[Function]}
                                                src=""
                                                style={Object {}}
                                    />
                        </div>
                        <div
                                    className="col-8 flex flex-row items-start justify-between"
                        >
                                    
                        </div>
            </div>
</div>,
          "className": "absolute z-nav",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <div
              className="flex flex-row items-center justify-between"
>
              <div
                            className="col-3"
              >
                            <Image
                                          alt=""
                                          bg={false}
                                          className="w100"
                                          onImgLoad={[Function]}
                                          src=""
                                          style={Object {}}
                            />
              </div>
              <div
                            className="col-8 flex flex-row items-start justify-between"
              >
                            
              </div>
</div>,
            "className": "w100 pt3 px4 bg-peach fixed drip",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <div
                  className="col-3"
>
                  <Image
                                    alt=""
                                    bg={false}
                                    className="w100"
                                    onImgLoad={[Function]}
                                    src=""
                                    style={Object {}}
                  />
</div>,
                <div
                  className="col-8 flex flex-row items-start justify-between"
>
                  
</div>,
              ],
              "className": "flex flex-row items-center justify-between",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": <Image
                    alt=""
                    bg={false}
                    className="w100"
                    onImgLoad={[Function]}
                    src=""
                    style={Object {}}
/>,
                  "className": "col-3",
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "alt": "",
                    "bg": false,
                    "children": null,
                    "className": "w100",
                    "onImgLoad": [Function],
                    "src": "",
                    "style": Object {},
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                "type": "div",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [],
                  "className": "col-8 flex flex-row items-start justify-between",
                },
                "ref": null,
                "rendered": Array [],
                "type": "div",
              },
            ],
            "type": "div",
          },
          "type": "div",
        },
        "type": "div",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
